--- a/index.html
+++ b/index.html
@@ -7,7 +7,16 @@
   </head>
   <body>
     <article id="main">
-    <p>ああいいかぜ</p>
+      <p>ああいいかぜ</p> 
+     <section class="cat-pit">
+      <img src="img/neco.jpg" alt="猫"width=300 class="cat">
+        <dl class="symbol">
+         <dt>〇</dt><dd>□</dd>
+         <dt>〇</dt><dd>□</dd>
+        </dl>
+      </section>
+      <imput type="submit"value="ok" class="btn">
+      <imput type="reset"value="reset" class="btn">
     </article>
   </body>
 </html>
