--- a/index.html
+++ b/index.html
@@ -9,11 +9,17 @@
     <article id="main">
       <p>ああいいかぜ</p> 
      <section class="cat-pit">
-      <img src="img/neco.jpg" alt="猫"width=300 class="cat">
+      <img src="img/../neco.jpg" alt="猫"width=300 class="cat">
         <dl class="symbol">
          <dt>〇</dt><dd>□</dd>
          <dt>〇</dt><dd>□</dd>
         </dl>
+       <table id="ingre">
+         <tr><th></th></tr>
+         <tr><th></th></tr>
+         <tr><th></th></tr>
+         <tr><th></th></tr>
+        </table>
       </section>
       <imput type="submit"value="ok" class="btn">
       <imput type="reset"value="reset" class="btn">
