--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <article id="main">
       <p>ああいいかぜ</p> 
      <section class="cat-pit">
-      <img src="img/../neco.jpg" alt="猫"width=300 class="cat">
+      <img src="neco.jpg" alt="猫"width=300 class="cat">
         <dl class="symbol">
          <dt>〇</dt><dd>□</dd>
          <dt>〇</dt><dd>□</dd>
