--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
          <dt>〇</dt><dd>□</dd>
         </dl>
        <table id="ingre">
-         <tr><th></th></tr>
-         <tr><th></th></tr>
-         <tr><th></th></tr>
-         <tr><th></th></tr>
+         <tr>猫<th>ミーアキャット</th></tr>
+         <tr>どら猫<th>大将</th></tr>
+         <tr>ドラえもん<th>ドラミちゃん</th></tr>
+         <tr>きつね<th>FOX</th></tr>
         </table>
       </section>
       <imput type="submit"value="ok" class="btn">
