--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
         </dl>
        <table id="ingre">
          <tr><th>猫</th><th>ミーアキャット</th></tr>
-         <tr><th>どら猫</th><th>大将</th></tr>
-         <tr><th>ドラえもん</th><th>ドラミちゃん</th></tr>
-         <tr><th>きつね</th><th>FOX</th></tr>
+         <tr><td>どら猫</td><td>大将</td></tr>
+         <tr><td>ドラえもん</td><td>ドラミちゃん</td></tr>
+         <tr><td>きつね</td><td>FOX</td></tr>
         </table>
       </section>
       <imput type="submit"value="ok" class="btn">
