--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
          <tr><td>きつね</td><td>FOX</td></tr>
         </table>
       </section>
-      <imput type="submit"value="ok" class="btn">
-      <imput type="reset"value="reset" class="btn">
+      <input type="submit"value="ok" class="btn">
+      <input type="reset"value="reset" class="btn">
     </article>
   </body>
 </html>
